tests/cmp/record-pat-dotdot-as-field.golden
Found 2 parse errors:

tests/cmp/record-pat-dotdot-as-field.trp:3:13: parse error
  3 |     val {.. = x, b} = r
    |             ^
  unexpected '='
  expected '}'

Suggestion: Mismatched braces - missing '}'?

----------------------------------------

tests/cmp/record-pat-dotdot-as-field.trp:3:16: parse error
  3 |     val {.. = x, b} = r
    |                ^
  unexpected ','

