tests/cmp/record-pat-dotdot-as-field.trp
(* Test: .. as field name - should fail *)
let val r = {a = 1, b = 2, c = 3}
    val {.. = x, b} = r
in b
end